Add labeling tool

--- a/src/custom_msgs/CMakeLists.txt
+++ b/src/custom_msgs/CMakeLists.txt
@@ -25,6 +25,7 @@ endif()
 
 rosidl_generate_interfaces(${PROJECT_NAME}
         msg/Clusters.msg
+        msg/Cone.msg
         
         DEPENDENCIES std_msgs sensor_msgs
         )
